-
Bug
-
Resolution: Fixed
-
P1: Critical
-
dev
-
None
-
a2104034d (dev), 40a9b0a54 (6.6), 7f2a20341 (6.5), 8e3b18734 (6.5.2)
I built QQEM with dev and noticed it was not starting. With some testing, noticed a strange cause for this: Calling a C++ method with QML rect property as a parameter. Commenting out line 17 of qtquickeffectmaker/tools/qqem/qml/ProjectSettingsDialog.qml makes it work:
//effectManager.setEffectPadding(newItemPadding);
Also changing it to this works:
effectManager.setEffectPadding(Qt.rect(0,1,2,3));
That newItemPadding is "property rect newItemPadding".
| For Gerrit Dashboard: QTBUG-114494 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 484962,5 | QML: Try QML conversion before metatype conversion | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 485563,3 | QML: Try QML conversion before metatype conversion | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 485564,3 | QML: Try QML conversion before metatype conversion | 6.5.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 485565,3 | QML: Try QML conversion before metatype conversion | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |