QML: Try QML conversion before metatype conversion

and guard against null gadgetPtr. This is what we get for uninitialized
value type properties.

Fixes: QTBUG-114494
Change-Id: I86ad23abcc4fec219017d1aad6b7add1c9a9af5d
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit a2104034d404179f5fad98fd54a133b288ded47d)