src/qml/qml/qqmlglobal_p.h
@@ -205,7 +205,9 @@ class QQmlValueTypeProvider
 {
 public:
     static bool createValueType(QMetaType targetMetaType, void *target, const QV4::Value &source);
-    static bool createValueType(QMetaType targetMetaType, void *target, const QVariant &source);
+    static bool createValueType(
+        QMetaType targetMetaType, void *target, QMetaType sourceMetaType, void *source);
+
     static QVariant constructValueType(
             QMetaType targetMetaType, const QMetaObject *targetMetaObject,
             int ctorIndex, void *ctorArg);
